[package]
name    = "catena-4610"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"

[dependencies.cmwx1zzabz]
git = "https://github.com/lthiery/cmwx1zzabz-rs.git"

[dependencies.stm32l0xx-hal]
git      = "https://github.com/stm32-rs/stm32l0xx-hal.git"
features = ["rt", "stm32l082", "stm32-usbd"]


[dev-dependencies]
cortex-m      = "0.6.1"
cortex-m-rt   = "0.6.10"
cortex-m-rtfm = "0.5.1"
nb            = "0.1.2"
panic-halt    = "0.2.0"
stm32-usbd    = "0.5.0"
usb-device    = "0.2.3"
usbd-serial   = "0.1.0"
longfi-device = { git = "https://github.com/helium/longfi-device-rs.git", branch = "master"}


[profile.dev]
opt-level = "s"

[profile.release]
incremental   = false
codegen-units = 1
lto           = true
opt-level     = "s"
