[package]
name    = "catena-4610"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"

[dependencies.cmwx1zzabz]
git = "https://github.com/lthiery/cmwx1zzabz-rs.git"

[dependencies.stm32l0xx-hal]
git = "https://github.com/stm32-rs/stm32l0xx-hal.git"
# Unfortunately the CMWX1ZZABZ-078 data sheet doesn't give us the specific model
# used, we just know it's an STM32L082. I'm just choosing one at random. They
# only differ in the package, but all have 32 pins, so it hopefully won't make a
# difference.
features = ["rt", "mcu-STM32L082KBTx", "stm32-usbd"]


[dev-dependencies]
cortex-m      = "0.7.2"
cortex-m-rt   = "0.6.12"
cortex-m-rtic = "0.5.3"
nb            = "1.0.0"
panic-halt    = "0.2.0"
stm32-usbd    = "0.5.1"
usb-device    = "0.2.5"
usbd-serial   = "0.1.0"

[dev-dependencies.longfi-device]
git    = "https://github.com/helium/longfi-device-rs.git"
branch = "master"


[profile.dev]
opt-level = "s"

[profile.release]
incremental   = false
codegen-units = 1
lto           = true
opt-level     = "s"
